[gd_scene load_steps=4 format=3 uid="uid://cjsmnnetjmgul"]

[ext_resource type="Script" uid="uid://b3iurp80p8f5l" path="res://game_over.gd" id="1_y26ei"]
[ext_resource type="AudioStream" uid="uid://c5ii3xrwkwt44" path="res://Sound/game-over-417465.mp3" id="2_yxx3c"]
[ext_resource type="AudioStream" uid="uid://cbm16sp1b2ma4" path="res://Sound/button-ui-sound-effect-395762.mp3" id="3_ccer4"]

[node name="GameOver" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_y26ei")

[node name="Container" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 500.0
offset_top = 200.0
offset_right = 540.0
offset_bottom = 277.0

[node name="HighScore" type="Label" parent="Control/Container"]
layout_mode = 2

[node name="CurrentScore" type="Label" parent="Control/Container"]
layout_mode = 2

[node name="CorrectAnswer" type="Label" parent="Control/Container"]
layout_mode = 2

[node name="ReturnButton" type="Button" parent="Control"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 0
offset_left = 475.0
offset_top = 400.0
offset_right = 675.0
offset_bottom = 475.0
text = "RETURN"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_yxx3c")
autoplay = true

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ccer4")

[connection signal="button_down" from="Control/ReturnButton" to="Control" method="_on_return_button_button_down"]
